--- a/artifacts/arm-trusted-firmware/rk3568/pkg.yaml
+++ b/artifacts/arm-trusted-firmware/rk3568/pkg.yaml
@@ -10,11 +10,14 @@ steps:
         sha256: "{{ .arm_trusted_firmware_unstable_sha256 }}"
         sha512: "{{ .arm_trusted_firmware_unstable_sha512 }}"
     env:
-      SOURCE_DATE_EPOCH: {{ .BUILD_ARG_SOURCE_DATE_EPOCH }}
+      SOURCE_DATE_EPOCH: {{.BUILD_ARG_SOURCE_DATE_EPOCH}}
     prepare:
       - |
+        # TODO: Revert this temporary fix.
         mkdir -p /usr/bin \
-          && ln -sf /toolchain/bin/env /usr/bin/env
+          && ln -sf /toolchain/bin/env /usr/bin/env \
+          && ln -sf /toolchain/bin/python3 /toolchain/bin/python \
+          && ln -sf /toolchain/bin/pip3 /toolchain/bin/pip
 
         tar xf arm-trusted-firmware.tar.gz --strip-components=1
     # rk3568
